--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Balance"></activity>
+        <activity android:name=".test"></activity>
+        <activity android:name=".AddPay" />
+        <activity android:name=".SearchUser" />
+        <activity android:name=".Balance" />
         <activity android:name=".Payment" />
         <activity android:name=".Pay" />
         <activity android:name=".Success" />
