--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <activity android:name=".SignUp" />
         <activity android:name=".Login" />
         <activity android:name=".UserHome" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
           
           
 
