--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         <activity android:name=".Login" />
         <activity android:name=".UserHome" />
         <activity android:name=".MainActivity"/>
+        <activity android:name=".trackedAndPickedDelivery"></activity>
+        <activity android:name=".trackedAndNotPicked"/>
+        <activity android:name=".packageDetails"></activity>
+        <activity android:name=".SearchRecepient"></activity>
           
           
 
